[project]
name = "path-reports"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "wktkellogg", email = "wkt@kellogg.northwestern.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "dspy>=2.6.24",
]

[project.scripts]
path-reports = "path_reports:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
